# civicbridge-ai

./: .gitignore  .replit  README.md  pnpm-lock.yaml  pyproject.toml  replit.md
artifacts/api-server/: package.json
artifacts/civicbridge-web/: index.html  package.json  vite.config.ts
artifacts/civicbridge-web/.replit-artifact/: artifact.toml
attached_assets/: Pasted-Build-only-these-four-files-for-CivicBridge-civicbridge_1773770206920.txt  Pasted-Build-only-these-two-files-for-CivicBridge-civicbridge-_1773770708895.txt  Pasted-I-am-uploading-two-PDF-files-in-this-conversation-for-C_1773772799251.txt
civicbridge/: .env.example  .gitignore  README.md  app.py  requirements.txt
civicbridge/config/: prompts.py  settings.py
civicbridge/core/: action_steps.py  document_loader.py  next_steps.py  rag_pipeline.py  simplifier.py  translator.py  vector_store.py
civicbridge/ui/: components.py
