[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu==1.10.0",
    "langchain==0.3.21",
    "langchain-community==0.3.20",
    "langchain-core==0.3.51",
    "langchain-openai==0.3.9",
    "langchain-text-splitters==0.3.8",
    "openai==1.70.0",
    "pymupdf==1.25.3",
    "python-dotenv==1.1.0",
    "streamlit==1.43.2",
    "tiktoken==0.9.0",
]
